ReducedConnection as record, convert SburbConnection to ReducedConnection before creating packet, move buffer writing to ReducedConnection